# sakamatabot-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.multi-stage  Dockerfile.poetry  Dockerfile.single-stage  Procfile  README.md  docker-compose.yaml  main.py  main_old.py  pyproject.toml  pyproject.toml.old  railway.toml  requirements.txt
.github/workflows/: codeql.yml  deploy-to-railway.yml
SongDB/: main.py  many_page.py  song_main.py
archive/: confirm.py  deal.py  embeds.py  error.py  hammer.py  holodex.py  holodex_process.py  member_count.py  message.py  messenger.py  old_ban.py  old_kick.py  persistent_view.json  poll.py  reload.py  stream.py  thread.py  utils.py  word_alert.py
archive/core_old/: old_confirm.py  old_embed_builder.py  old_log_sender.py  old_membership.py  old_membership_ui.py  old_message.py  old_timeout.py  old_utils.py
archive/exts_old/: inquiry.py  report.py
archive/logging/: listener.py
components/: cmp_embeds.py  cmp_inquiry.py  embeds.py  escape.py  inquiry.py
components/input/: input_ui.py
components/membership/: mem_embeds.py  start_verify.py
components/ui/: base.py  confirm.py  message_input.py  view.py  view_base.py
config/: cogs.yaml  config.toml  config.yaml  config.yml  extensions.yaml  poll_emoji.json  poll_emoji.py  view.yaml
embeds/: bot.py  command_info.py
embeds/extensions/: moderation.py  thread.py
log/: make_folder.txt
model/: report.py  system_text.py
my_class/ui/: view.py
schemas/: command.py  config.py  general.py  ui.py
src/: bot.py  command_tree.py  old_bot.py
src/SongDB/: many_page.py  song_embed_builder.py  song_main.py
src/components/: base.py  cmp_embeds.py  type.py
src/components/extensions/: inquiry.py  report.py
src/components/input/: input_ui.py
src/components/membership/: start_verify.py
src/components/ui/: base.py
src/core_old/: ban.py  confirm.py  dm.py  kick.py  log_sender.py  membership.py  membership_ui.py  message.py  timeout.py
src/embeds/: bot.py  command_info.py
src/embeds/components/: input_ui.py
src/embeds/extensions/: moderation.py  report.py  thread.py
src/extensions/: admin.py  dispand.py  entrance.py  error_catcher.py  hammer.py  inquiry.py  kick_and_ban.py  log.py  member_count.py  moderation.py  playground.py  poll.py  report.py  send.py  thread.py  utils.py
src/exts/: deal.py  embeds.py  entrance.py  error.py  hammer.py  inquiry.py  member_count.py  messenger.py  poll.py  reload.py  report.py  thread.py  utils.py
src/exts_old/: deal.py  dm.py  embeds.py  entrance.py  hammer.py  inquiry.py  member_count.py  message.py  messenger.py  poll.py  reload.py  report.py  thread.py
src/logging/: listener.py
src/membership/: command.py
src/text/: extensions.py
src/tools/: checker.py  dt.py  finder.py  webhook.py
text/: error.py  extensions.py
tools/: checker.py  dt.py  finder.py  io.py  logger.py  webhook.py
type/: color.py  discord.py  discord_type.py  exception.py  interaction.py  response.py  type_alias.py  view_load.py  word.py
utils/: call_any.py  checker.py  cui.py  dt.py  finder.py  gsheets.py  logger.py  run_any.py  time.py  view_handler.py  webhook.py
